# ctrade

./: README.md  pyproject.toml
ctrade/: main.py
ctrade/configuration/: configs.py
ctrade/templates/: base_config.json.j2  base_pairs.json.j2
ctrade/util/: template_renderer.py
freqtrade/exchange/: __init__.py  exchange.py  mexc.py
freqtrade/resolvers/: exchange_resolver.py
