[project]
name = "ctrade"
version = "0.1.0"
description = ""
authors = [
    {name = "Dongmin Yu",email = "miniway@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ccxt (>=4.4.52,<5.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ta-lib (>=0.6.1,<0.7.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "ft-scikit-optimize (>=0.9.2,<0.10.0)",
    "python-rapidjson (>=1.20,<2.0)",
    "sdnotify (>=0.3.2,<0.4.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "humanize (>=4.11.0,<5.0.0)",
    "cachetools (>=5.5.1,<6.0.0)",
    "questionary (>=2.1.0,<3.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "packaging (>=24.2,<25.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "psutil (>=6.1.1,<7.0.0)",
    "pycoingecko (>=3.2.0,<4.0.0)",
    "py-find-1st (>=1.1.7,<2.0.0)",
    "websockets (>=14.2,<15.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "technical (>=1.5.0,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)",
]

[project.scripts]
start = "ctrade.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
